@@ -1,30 +1,29 @@
 package io.github.lgatodu47.screenshot_viewer.screens;
 
-import com.mojang.blaze3d.platform.InputConstants;
+import com.google.common.collect.Lists;
+import com.mojang.blaze3d.matrix.MatrixStack;
 import com.mojang.blaze3d.systems.RenderSystem;
-import com.mojang.blaze3d.vertex.PoseStack;
 import io.github.lgatodu47.screenshot_viewer.ScreenshotViewer;
 import it.unimi.dsi.fastutil.booleans.BooleanConsumer;
-import net.minecraft.Util;
 import net.minecraft.client.Minecraft;
-import net.minecraft.client.gui.Font;
-import net.minecraft.client.gui.components.AbstractWidget;
-import net.minecraft.client.gui.components.Button.OnPress;
-import net.minecraft.client.gui.components.EditBox;
-import net.minecraft.client.gui.components.ImageButton;
-import net.minecraft.client.gui.components.Widget;
-import net.minecraft.client.gui.components.events.AbstractContainerEventHandler;
-import net.minecraft.client.gui.components.events.GuiEventListener;
-import net.minecraft.client.gui.screens.Screen;
-import net.minecraft.client.renderer.GameRenderer;
-import net.minecraft.network.chat.CommonComponents;
-import net.minecraft.network.chat.Component;
-import net.minecraft.network.chat.TranslatableComponent;
-import net.minecraft.resources.ResourceLocation;
+import net.minecraft.client.gui.*;
+import net.minecraft.client.gui.screen.ConfirmScreen;
+import net.minecraft.client.gui.screen.Screen;
+import net.minecraft.client.gui.widget.TextFieldWidget;
+import net.minecraft.client.gui.widget.Widget;
+import net.minecraft.client.gui.widget.button.Button;
+import net.minecraft.client.gui.widget.button.Button.IPressable;
+import net.minecraft.client.gui.widget.button.ImageButton;
+import net.minecraft.util.ResourceLocation;
+import net.minecraft.util.Util;
+import net.minecraft.util.text.ITextComponent;
+import net.minecraft.util.text.TranslationTextComponent;
+import org.apache.commons.lang3.StringUtils;
 import org.apache.commons.lang3.tuple.Triple;
-import org.jetbrains.annotations.NotNull;
-import org.jetbrains.annotations.Nullable;
+import org.lwjgl.glfw.GLFW;
 
+import javax.annotation.Nonnull;
+import javax.annotation.Nullable;
 import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
@@ -37,15 +36,15 @@ import java.util.function.Supplier;
 
 import static io.github.lgatodu47.screenshot_viewer.screens.ManageScreenshotsScreen.LOGGER;
 
-class ScreenshotPropertiesMenu extends AbstractContainerEventHandler implements Widget {
+class ScreenshotPropertiesMenu extends FocusableGui implements IRenderable {
     private static final int BUTTON_SIZE = 19;
 
     private final Supplier<Minecraft> mcSupplier;
     private final IntSupplier parentWidth, parentHeight;
-    private final List<AbstractWidget> buttons = new ArrayList<>();
+    private final List<Widget> buttons = new ArrayList<>();
 
     private int x, y, width, height;
-    @NotNull
+    @Nonnull
     private String fileName = "";
     private boolean shouldRender;
     @Nullable
@@ -79,10 +78,10 @@ class ScreenshotPropertiesMenu extends AbstractContainerEventHandler implements 
             hide();
         };
         // List of info about the buttons that are included in the widget.
-        List<Triple<Integer, Component, OnPress>> buttonInfo = List.of(
+        List<Triple<Integer, ITextComponent, IPressable>> buttonInfo = Lists.newArrayList(
                 Triple.of(0, ScreenshotViewer.translatable("screen", "button.delete_screenshot"), btn -> {
                     if (ManageScreenshotsScreen.CONFIG.promptWhenDeletingScreenshot.get()) {
-                        childScreen = new ConfirmScreen(deleteAction, screenshotFile.getName());
+                        childScreen = new ConfirmationScreen(deleteAction, screenshotFile.getName());
                         childScreen.init(this.mcSupplier.get(), parentWidth.getAsInt(), parentHeight.getAsInt());
                     } else {
                         deleteAction.accept(true);
@@ -95,7 +94,7 @@ class ScreenshotPropertiesMenu extends AbstractContainerEventHandler implements 
                             Path moved = Files.move(screenshotFile.toPath(), screenshotFile.toPath().resolveSibling(s));
                             fileUpdater.accept(moved.toFile());
                         } catch (IOException e) {
-                            LOGGER.error("Failed to rename 'screenshot' file at '" + screenshotFile.toPath().toAbsolutePath() + "' from '" + screenshotFile.getName() + "' to '" + s + "'" , e);
+                            LOGGER.error("Failed to rename 'screenshot' file at '" + screenshotFile.toPath().toAbsolutePath() + "' from '" + screenshotFile.getName() + "' to '" + s + "'", e);
                         }
                     }, this::hide);
                     childScreen.init(this.mcSupplier.get(), parentWidth.getAsInt(), parentHeight.getAsInt());
@@ -103,7 +102,7 @@ class ScreenshotPropertiesMenu extends AbstractContainerEventHandler implements 
                 Triple.of(2, ScreenshotViewer.translatable("screen", "button.close_properties_menu"), btn -> hide())
         );
 
-        Font font = mcSupplier.get().font;
+        FontRenderer font = mcSupplier.get().font;
         final int largestTextWidth = buttonInfo.stream().map(Triple::getMiddle).mapToInt(font::width).max().orElse(0);
         this.width = spacing * 2 + Math.max(font.width(this.fileName), BUTTON_SIZE + largestTextWidth + spacing);
         this.height = spacing * 3 + font.lineHeight + BUTTON_SIZE * buttonInfo.size();
@@ -121,8 +120,8 @@ class ScreenshotPropertiesMenu extends AbstractContainerEventHandler implements 
         }
 
         for (int i = 0; i < buttonInfo.size(); i++) {
-            Triple<Integer, Component, OnPress> pair = buttonInfo.get(i);
-            buttons.add(new Button(this.x + spacing, this.y + spacing * 2 + font.lineHeight + BUTTON_SIZE * i, BUTTON_SIZE * pair.getLeft(), BUTTON_SIZE, pair.getMiddle(), pair.getRight()));
+            Triple<Integer, ITextComponent, IPressable> pair = buttonInfo.get(i);
+            buttons.add(new ScreenButton(this.x + spacing, this.y + spacing * 2 + font.lineHeight + BUTTON_SIZE * i, BUTTON_SIZE * pair.getLeft(), BUTTON_SIZE, pair.getMiddle(), pair.getRight()));
         }
 
         shouldRender = true;
@@ -141,7 +140,7 @@ class ScreenshotPropertiesMenu extends AbstractContainerEventHandler implements 
     }
 
     @Override
-    public void render(PoseStack matrices, int mouseX, int mouseY, float delta) {
+    public void render(MatrixStack matrices, int mouseX, int mouseY, float delta) {
         if (shouldRender) {
             matrices.pushPose();
             matrices.translate(0, 0, 1);
@@ -149,7 +148,7 @@ class ScreenshotPropertiesMenu extends AbstractContainerEventHandler implements 
                 final int spacing = 2;
                 fill(matrices, x, y, x + width, y + height, 0xFF424242);
                 mcSupplier.get().font.drawShadow(matrices, fileName, x + spacing, y + spacing, 0xFFFFFFFF);
-                for (AbstractWidget widget : buttons) {
+                for (Widget widget : buttons) {
                     widget.render(matrices, mouseX, mouseY, delta);
                     mcSupplier.get().font.drawShadow(matrices, widget.getMessage(), widget.x + widget.getWidth() + spacing, widget.y + (widget.getHeight() - 9) / 2.f + spacing, 0xFFFFFFFF);
                 }
@@ -161,7 +160,7 @@ class ScreenshotPropertiesMenu extends AbstractContainerEventHandler implements 
     }
 
     @Override
-    public List<? extends GuiEventListener> children() {
+    public List<? extends IGuiEventListener> children() {
         return buttons;
     }
 
@@ -179,7 +178,7 @@ class ScreenshotPropertiesMenu extends AbstractContainerEventHandler implements 
 
     @Override
     public boolean keyPressed(int keyCode, int scanCode, int modifiers) {
-        if (keyCode == InputConstants.KEY_ESCAPE) {
+        if (keyCode == GLFW.GLFW_KEY_ESCAPE) {
             hide();
             return true;
         }
@@ -197,33 +196,32 @@ class ScreenshotPropertiesMenu extends AbstractContainerEventHandler implements 
         return super.charTyped(chr, modifiers);
     }
 
-    private static final class Button extends ImageButton {
+    private static final class ScreenButton extends ImageButton {
         private static final ResourceLocation TEXTURE = new ResourceLocation(ScreenshotViewer.MODID, "textures/gui/screenshot_viewer_icons.png");
         private final int imgU, imgV;
 
-        public Button(int x, int y, int imgU, int imgV, Component title, OnPress pressAction) {
-            super(x, y, BUTTON_SIZE, BUTTON_SIZE, 0, 0, 0, Button.WIDGETS_LOCATION, 128, 128, pressAction, title);
+        public ScreenButton(int x, int y, int imgU, int imgV, ITextComponent title, IPressable pressAction) {
+            super(x, y, BUTTON_SIZE, BUTTON_SIZE, 0, 0, 0, ScreenButton.WIDGETS_LOCATION, 128, 128, pressAction, title);
             this.imgU = imgU;
             this.imgV = imgV;
         }
 
         @Override
-        public void renderButton(PoseStack matrices, int mouseX, int mouseY, float delta) {
-            RenderSystem.setShader(GameRenderer::getPositionTexShader);
-            RenderSystem.setShaderTexture(0, TEXTURE);
+        public void renderButton(MatrixStack matrices, int mouseX, int mouseY, float delta) {
+            Minecraft.getInstance().getTextureManager().bind(TEXTURE);
             RenderSystem.enableDepthTest();
-            ImageButton.blit(matrices, this.x, this.y, isHoveredOrFocused() ? BUTTON_SIZE : BUTTON_SIZE * 2, 0, this.width, this.height, 128, 128);
+            ImageButton.blit(matrices, this.x, this.y, isHovered() ? BUTTON_SIZE : BUTTON_SIZE * 2, 0, this.width, this.height, 128, 128);
             ImageButton.blit(matrices, this.x, this.y, this.imgU, this.imgV, this.width, this.height, 128, 128);
         }
     }
 
-    private static final class ConfirmScreen extends net.minecraft.client.gui.screens.ConfirmScreen {
-        public ConfirmScreen(BooleanConsumer callback, String fileName) {
-            super(callback, new TranslatableComponent("screen." + ScreenshotViewer.MODID + ".delete_prompt", fileName), ScreenshotViewer.translatable("screen", "delete_prompt.message"));
+    private static final class ConfirmationScreen extends ConfirmScreen {
+        public ConfirmationScreen(BooleanConsumer callback, String fileName) {
+            super(callback, new TranslationTextComponent("screen." + ScreenshotViewer.MODID + ".delete_prompt", fileName), ScreenshotViewer.translatable("screen", "delete_prompt.message"));
         }
 
         @Override
-        public void renderBackground(PoseStack matrices, int vOffset) {
+        public void renderBackground(MatrixStack matrices, int vOffset) {
             this.fillGradient(matrices, 0, 0, this.width, this.height, -1072689136, -804253680);
         }
     }
@@ -232,8 +230,8 @@ class ScreenshotPropertiesMenu extends AbstractContainerEventHandler implements 
         private final String previousName;
         private final Consumer<String> newNameConsumer;
         private final Runnable closeAction;
-        private EditBox textField;
-        private net.minecraft.client.gui.components.Button doneBtn;
+        private TextFieldWidget textField;
+        private Button doneBtn;
 
         private RenameScreen(String previousName, Consumer<String> newNameConsumer, Runnable closeAction) {
             super(ScreenshotViewer.translatable("screen", "rename_screenshot"));
@@ -252,23 +250,23 @@ class ScreenshotPropertiesMenu extends AbstractContainerEventHandler implements 
         @Override
         protected void init() {
             super.init();
-            this.textField = new EditBox(this.font, (this.width - 150) / 2, (this.height - 20) / 2, 150, 20, ScreenshotViewer.translatable("screen", "field.screenshot_name"));
+            this.textField = new TextFieldWidget(this.font, (this.width - 150) / 2, (this.height - 20) / 2, 150, 20, ScreenshotViewer.translatable("screen", "field.screenshot_name"));
             textField.setMaxLength(128);
             textField.setFilter(RenameScreen::checkInvalidCharacters);
-            this.doneBtn = new net.minecraft.client.gui.components.Button(this.width / 2 - 4 - 150, this.height / 2 + 50, 150, 20, CommonComponents.GUI_DONE, btn -> {
+            this.doneBtn = new Button(this.width / 2 - 4 - 150, this.height / 2 + 50, 150, 20, DialogTexts.GUI_DONE, btn -> {
                 this.newNameConsumer.accept(textField.getValue().trim().concat(".png"));
                 this.closeAction.run();
             });
             doneBtn.active = false;
-            textField.setResponder(s -> doneBtn.active = !(s.isBlank() || s.trim().equals(previousName) || s.endsWith(".")));
+            textField.setResponder(s -> doneBtn.active = !(StringUtils.isBlank(s) || s.trim().equals(previousName) || s.endsWith(".")));
             textField.setValue(previousName);
-            this.addRenderableWidget(textField);
-            this.addRenderableWidget(doneBtn);
-            this.addRenderableWidget(new net.minecraft.client.gui.components.Button(this.width / 2 + 4, this.height / 2 + 50, 150, 20, CommonComponents.GUI_BACK, btn -> closeAction.run()));
+            this.addButton(textField);
+            this.addButton(doneBtn);
+            this.addButton(new Button(this.width / 2 + 4, this.height / 2 + 50, 150, 20, DialogTexts.GUI_BACK, btn -> closeAction.run()));
         }
 
         @Override
-        public void render(PoseStack matrices, int mouseX, int mouseY, float delta) {
+        public void render(MatrixStack matrices, int mouseX, int mouseY, float delta) {
             this.fillGradient(matrices, 0, 0, this.width, this.height, -1072689136, -804253680);
             drawCenteredString(matrices, this.font, this.title, this.width / 2, this.height / 2 - 70, 0xFFFFFF);
             super.render(matrices, mouseX, mouseY, delta);
@@ -276,7 +274,7 @@ class ScreenshotPropertiesMenu extends AbstractContainerEventHandler implements 
 
         @Override
         public boolean keyPressed(int keyCode, int scanCode, int modifiers) {
-            if (keyCode == InputConstants.KEY_RETURN && doneBtn != null && doneBtn.active) {
+            if (keyCode == GLFW.GLFW_KEY_ENTER && doneBtn != null && doneBtn.active) {
                 doneBtn.onPress();
                 return true;
             }
